--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul id="list"></ul>
             </div> 
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-6">
+        <div class="col-xs-12 col-sm-12 col-md-6" id="map">
             <div id="my_osm_widget_map"></div>
         </div>
       </div>
