--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
       <li>CONTACT</li>
     </ul>
     </nav>
-    <div class="row">
+    <div class="row with-map" >
         <div class="col-xs-12 col-sm-12 col-md-6">
             <div class="listederoulante">
+              <input type="checkbox" checked data-toggle="toggle" data-height="75">
               <div class="nb-resultat center"></div>
                 <ul id="list"></ul>
             </div>
